# sophiegermain

./: .pylintrc  README.md  README.rst  pyproject.toml
.github/workflows/: lint-test-cover-docs.yml
docs/: toc.rst
docs/_source/: sophiegermain.rst
sophiegermain/: sophiegermain.py
src/sophiegermain/: __init__.py  sophiegermain.py
