[project]
name = "sophiegermain"
version = "0.1.0"
description = """\
    Pure-Python library that provides a selection of Sophie Germain primes
    that are organized by representation size.
    """
license = {text = "MIT"}
authors = [
    {name = "Nillion"},
    {email = "engineering@nillion.com"}
]
readme = "README.rst"
requires-python = ">=3.7"

[project.urls]
Repository = "https://github.com/nillion-oss/sophiegermain"
Documentation = "https://sophiegermain.readthedocs.io"

[project.optional-dependencies]
docs = [
    "toml~=0.10.2",
    "sphinx~=4.2.0",
    "sphinx-rtd-theme~=1.0.0"
]
test = [
    "pytest~=7.2",
    "pytest-cov~=4.0"
]
lint = [
    "pylint~=2.17.0"
]
coveralls = [
    "coveralls~=3.3.1"
]
publish = [
    "build~=0.10",
    "twine~=4.0"
]

[build-system]
requires = [
    "setuptools>=68.0"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--doctest-modules --ignore=docs --cov=sophiegermain --cov-report term-missing"
